fixes font sizing on iphone 5

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -506,7 +506,16 @@ h1 {
 		font-size: 50px;
 	}
 	h1 {
-		font-size: 40px;
-		padding-left: 15px;
+		font-size: 30px;
+	}
+	p, li {
+		font-size: 14px;
+	}
+	.paragraph-container {
+		padding-right: 20px;
+		padding-left: 20px;
+	}
+	.intro-container {
+		height: 360px;
 	}
 }
